<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Twist"
        android:id="@+id/btnWatchTwists"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="175dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:onClick="getList"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AddNew"
        android:id="@+id/btnAddNewTwist"
        android:background="@color/colorPrimary"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/colorWhite"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scoreboard"
        android:id="@+id/btnScoreboard"
        android:background="@color/colorPrimary"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/colorWhite"
        android:onClick="scoreboard"/>
</LinearLayout>