<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:textSize="20dp"
        android:textColor="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtTwistDetailTitle"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/Twistee"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/txtDetailTwistee"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/Reward"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/txtDetailReward"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/YourAnswer"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/txtDetailYourAnswer"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/TwisteeAnswer"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/txtDetailTwisteeAnswer"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="25dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:textAlignment="center"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_marginTop="20dp"
            android:id="@+id/txtDetailWon"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary"
            android:paddingLeft="20dp"
            android:textColor="@color/colorWhite"
            android:text="@string/IRight"
            android:layout_alignParentLeft="true"
            android:id="@+id/btnIRight"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/btnIRight"
            android:layout_alignParentRight="true"
            android:textAlignment="textEnd"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:id="@+id/btnTwisteeRight"/>
    </RelativeLayout>

</LinearLayout>